--- a/helm/vprofilecharts/templates/vproingress.yaml
+++ b/helm/vprofilecharts/templates/vproingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    http:
+  - http:      # <-- Added "-" here to make it an array
       paths:
       - path: /
         pathType: Prefix
